shaders as Assets, colorflow shader, two-triangles basic setup

--- a/AndroidGL/AndroidGL.csproj
+++ b/AndroidGL/AndroidGL.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\vertex.glsl" />
+    <AndroidAsset Include="Assets\colorflow.frag" />
     <None Include="Properties\AndroidManifest.xml">
       <SubType>Designer</SubType>
     </None>
@@ -88,9 +90,7 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2.1" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Assets\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-hdpi\android_gl_icon.png" />
   </ItemGroup>
