--- a/AndroidGL/AndroidGL.csproj
+++ b/AndroidGL/AndroidGL.csproj
@@ -74,6 +74,7 @@
     <AndroidAsset Include="Assets\vertex.glsl" />
     <AndroidAsset Include="Assets\shaders\colorflow.frag" />
     <AndroidAsset Include="Assets\shaders\spirals_1.frag" />
+    <AndroidAsset Include="Assets\shaders\raymarch.frag" />
     <None Include="Properties\AndroidManifest.xml">
       <SubType>Designer</SubType>
     </None>
